@@ -1,50 +1,0 @@
-[Desktop Entry]
-Version=0.92
-Encoding=UTF-8
-MultipleArgs=false
-Terminal=0
-Icon=extension.png
-Exec=/opt/openoffice/program/soffice slot:5500
-Categories=Application;Office;X-Red-Hat-Base;X-SuSE-Core-Office;
-Type=Application
-Name=OpenOffice.org devel From Template
-Name[en]=OpenOffice.org devel From Template
-Name[de]=OpenOffice.org devel Aus Vorlage
-Name[pt]=OpenOffice.org devel Aus Vorlage
-Name[ru]=OpenOffice.org devel из шаблона...
-Name[el]=OpenOffice.org devel Από πρότυπο
-Name[nl]=OpenOffice.org devel Uit sjabloon
-Name[fr]=À partir d'un modèle OpenOffice.org devel
-Name[es]=A partir de una plantilla de OpenOffice.org devel
-Name[fi]=OpenOffice.org devel Aus Vorlage
-Name[hu]=OpenOffice.org devel sablonból
-Name[it]=OpenOffice.org devel Da modello
-Name[cs]=Ze šablony OpenOffice.org devel
-Name[sk]=Zo šablóny OpenOffice.org devel
-Name[da]=OpenOffice.org devel Fra skabelon
-Name[sv]=Från en OpenOffice.org devel-mall
-Name[pl]=OpenOffice.org devel Na podstawie szablonu
-Name[pt_BR]=A partir de um modelo OpenOffice.org devel
-Name[ja]=OpenOffice.org devel テンプレートから
-Name[ko]=OpenOffice.org devel 서식 파일로부터
-Name[zh_CN]=OpenOffice.org devel 采用样式
-Name[zh_TW]=OpenOffice.org devel 採用樣式
-Name[tr]=OpenOffice.org devel Şablondan
-Name[ar]=OpenOffice.org devel Aus Vorlage
-Name[he]=OpenOffice.org devel Aus Vorlage
-Name[ca]=OpenOffice.org devel Aus Vorlage
-Name[th]=OpenOffice.org devel จากแม่แบบ
-Name[hi_IN]=OpenOffice.org devel Aus Vorlage
-Name[et]=OpenOffice.org devel mallist
-Name[sl]=OpenOffice.org devel iz predloge
-Name[ns]=OpenOffice.org devel go tšwa go Template
-Name[af]=OpenOffice.org devel vanaf sjabloon
-Name[zu]=I-OpenOffice.org devel esuka Oqwenjini lokuphumelelisa
-Name[nb]=OpenOffice.org devel From Template
-Name[cy]=OpenOffice.org devel From Template
-Name[tn]=OpenOffice.org devel From Template
-Name[nn]=OpenOffice.org devel From Template
-Name[eu]=OpenOffice.org devel Aus Vorlage
-Name[lt]=„OpenOffice.org devel“ dokumentas iš šablono
-Name[kn_IN]=OpenOffice.org devel ಸಿದ್ಧವಿನ್ಯಾಸ ಪುಟದಿಂದ
-Name[gl]=A partir dun modelo de OpenOffice.org devel
